dealing with contrast issues and aria-labels for accessibility

--- a/client/src/components/blogs/blogs.css
+++ b/client/src/components/blogs/blogs.css
@@ -8,8 +8,8 @@
     width: 100%;
     font-family: BigShoulder;
     font-size: 50px;
-    background-color: peru;
-    color:#4A5375;
+    background-color:#CF8740;
+    color:#2d3449;
     padding: 30px;
     text-align: justify;
     margin: 0;
@@ -17,12 +17,13 @@
 
 /* other colour ideas from swatches 
 
-#CF8740
-#CC6960
-#AC5B7B
-#7B5883
-#4A5375
-#2F4858
+#CF8740 - peru
+#CC6960 - salmony pink
+#AC5B7B - strong darker pink
+#7B5883 - strong darker purple
+#4A5375 - strong darker sky blue 
+2d3449 - even darker blue - along the lines of above 
+#2F4858 - strong darker turquoisey greeny blue
 
 */
 
