--- a/client/src/pages/tour/tour.css
+++ b/client/src/pages/tour/tour.css
@@ -42,7 +42,7 @@ th {
 
 .tableContainer {
     width: 100%;
-    color: #4A5375;
+    color:  #2d3449;
     padding: 20px;
     font-size: 2.5vw;
 
@@ -58,7 +58,7 @@ th {
 }
 
 a {
-    color:  #4A5375;
+    color:#2d3449;
     text-decoration: none;
 }
 
